@@ -1,9 +1,12 @@
-lib_LTLIBRARIES = libqt.la
+lib_LTLIBRARIES = libqt.la libstp.la
 
 libqt_la_SOURCES = \
 	qt.c \
 	qtmdc.c \
 	qtmds.S
+
+libstp_la_SOURCES = \
+	stp.c
 
 noinst_HEADERS = \
 	qt.h \
