@@ -6,6 +6,8 @@
 
 #include "plasma.h"
 
+const int Count = 100000000;
+
 int pMain(int argc,const char *argv[])
 {
   int result1 = 0, result2 = 0, result3 = 0;
@@ -14,7 +16,7 @@ int pMain(int argc,const char *argv[])
     {
       for (int i = 0; i != 10; ++i) {
         int j = 0;
-        for (int i = 0; i != 100000000; ++i) {
+        for (int i = 0; i != Count; ++i) {
           j += 1;
         }
         plasma::mprintf ("In block 1.\n");
@@ -25,7 +27,7 @@ int pMain(int argc,const char *argv[])
     {
       for (int j = 0; j != 10; ++j) {
         int j = 0;
-        for (int i = 0; i != 100000000; ++i) {
+        for (int i = 0; i != Count; ++i) {
           j += 1;
         }
         plasma::mprintf("In block 2.\n");
