@@ -34,7 +34,7 @@ double foo(double a,double b,int ix)
     for (int i = 0; i != 10000000; ++i) {
       xx += 1;
     }
-    mprintf ("  Running at priority %d.\n",pGetPriority());
+    //mprintf ("  Running at priority %d.\n",pGetPriority());
   }
   v.add(ix);
   return a*a + b*b;
